# xberg

./: .coderabbit.yaml  .deepsource.toml  .dockerignore  .gh-actions-updater.toml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .hadolint.yaml  .lychee.toml  .mcp.json  .npmrc  .output.txt  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .rumdl.toml  .taplo.toml  .textlintrc.json  .typos.toml  ARCHITECTURE_REVIEW.md  ATTRIBUTIONS.md  BIBTEX_COMPARISON_EXAMPLE.md  BIBTEX_REVIEW.md  BIBTEX_REVIEW_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MARKDOWN_EXTRACTOR_REVIEW.md  MARKDOWN_FIXES_SUMMARY.md  MARKDOWN_REVIEW_SUMMARY.txt  MODELS_VERSION.txt  PLATFORM_SUPPORT.md  Package.swift  README.md  THIRD_PARTY_LICENSES.md  TODO.md  TYPST_COMPARISON_VISUAL.md  TYPST_EXTRACTOR_IMPLEMENTATION_GUIDE.md  (+37 more)
cli-proxy/pypi/: __init__.py  hatch_build.py  pyproject.toml
cli-proxy/pypi/xberg_cli/: cli.py
crates/kreuzberg/: Cargo.toml  README.md  build.rs
crates/kreuzberg-candle-ocr/: Cargo.toml  README.md
crates/kreuzberg-candle-ocr/src/: device.rs  error.rs  lib.rs
crates/kreuzberg-candle-ocr/tests/: deepseek_ocr_integration.rs  glm_ocr_integration.rs  glm_ocr_paired_pipeline.rs  hunyuan_ocr_integration.rs  paddleocr_vl_15_integration.rs  paddleocr_vl_integration.rs  trocr_integration.rs
crates/kreuzberg-cli/: Cargo.toml  README.md
crates/kreuzberg-cli/src/: logging.rs  main.rs
crates/kreuzberg-cli/tests/: commands_test.rs  config_env_overrides_test.rs  e2e_config_test.rs  extract_envelope.rs  log_level_robustness.rs
crates/kreuzberg-ffi/: Cargo.toml  README.md  SCOPE-ISSUE-DRAFT.md  SCOPE.md  build.rs  cbindgen.toml  kreuzberg.h
crates/kreuzberg-ffi/benches/: result_view_benchmark.rs
crates/kreuzberg-ffi/include/: kreuzberg.h
crates/kreuzberg-ffi/src/: batch_streaming.rs  cancellation.rs  config.rs  config_builder.rs  embedding.rs  error.rs  helpers.rs  lib.rs  memory.rs  panic_shield.rs  rendering.rs  result.rs  result_pool.rs  result_view.rs  string_intern.rs  types.rs  validation.rs
crates/kreuzberg-ffi/tests/: config_loading_tests.rs  config_tests.rs  email_attachment_data_len.rs  extractor_tests.rs  plugin_registration_tests.rs  vtable_bytes_len.rs
crates/kreuzberg-jni/: Cargo.toml
crates/kreuzberg-jni/src/: lib.rs
crates/kreuzberg-node/: Cargo.toml  README.md  format-metadata-wrapper.js  index.d.ts  package.json  tsconfig.json  tsup.config.ts
crates/kreuzberg-node/artifacts/: index.js
crates/kreuzberg-node/src/: batch.rs  embedding_presets.rs  error_handling.rs  extraction.rs  lib.rs  result.rs  validation.rs  worker_pool_api.rs
crates/kreuzberg-node/typescript/: errors.ts  index.ts  types.ts
crates/kreuzberg-paddle-ocr/: Cargo.toml  LICENSE  README.md
crates/kreuzberg-paddle-ocr/src/: angle_net.rs  base_net.rs  constants.rs  crnn_net.rs  db_net.rs  lib.rs  ocr_error.rs  ocr_lite.rs  ocr_result.rs  ocr_utils.rs  scale_param.rs
crates/kreuzberg-php/: Cargo.toml  build.sh
crates/kreuzberg-php/examples/: basic_usage.php
crates/kreuzberg-php/src/: async_extraction.rs  composer.json  config.rs  embeddings.rs  error.rs  extraction.rs  lib.rs  plugins.rs  types.rs  validation.rs
crates/kreuzberg-py/: Cargo.toml  README.md  build.rs
crates/kreuzberg-py/src/: cancellation.rs  config.rs  core.rs  error.rs  ffi.rs  lib.rs  plugins.rs  pyproject.toml  types.rs  validation.rs
crates/kreuzberg/benches/: text_quality.rs  token_reduction.rs
crates/kreuzberg/examples/: bench_fixes.rs  test_pdfium_fork.rs
crates/kreuzberg/src/: cancellation.rs  doc_orientation.rs  embeddings.rs  error.rs  lib.rs  table_core.rs  types.rs
crates/kreuzberg/tests/: api_chunk.rs  api_consistency.rs  api_large_pdf_extraction.rs  api_large_pdf_extraction_diagnostics.rs  api_tests.rs  batch_orchestration.rs  batch_pooling_benchmark.rs  batch_processing.rs  bibtex_parity_test.rs  candle_backends.rs  concurrency_stress.rs  config_behavioral.rs  config_features.rs  config_integration_test.rs  config_loading_tests.rs  contract_mcp.rs  core_integration.rs  cross_format_parity.rs  csv_embedding_quality.rs  docx_formatting_test.rs  docx_metadata_extraction_test.rs  docx_ocr_integration_test.rs  email_integration.rs  embedding_preset_stubs.rs  epub_markdown_headings_tests.rs  extraction_timeout_tests.rs  fictionbook_extractor_tests.rs  glm_ocr_backend.rs  gpu_acceleration.rs  html_output_quality.rs  image_output_format.rs  instrumentation_test.rs  issue_1004_nested_list_regression.rs  issue_671_pptx_image_config_regression.rs  issue_797_preset_embedding_regression.rs  iwork_integration.rs  jats_extractor_tests.rs  json_schema_validation.rs  layout_for_markdown.rs  llm_integration.rs  (+37 more)
crates/xberg/: Cargo.toml  build.rs
crates/xberg-candle-ocr/: Cargo.toml
crates/xberg-candle-ocr/src/: download_guard.rs  lib.rs
crates/xberg-cli/: Cargo.toml
crates/xberg-cli/src/: logging.rs  main.rs  (+1 more)
crates/xberg-doc-store/: Cargo.toml
crates/xberg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/xberg-gliner/: Cargo.toml
crates/xberg-gliner-candle/: Cargo.toml
crates/xberg-libwpd/: Cargo.toml  LICENSE  README.md  build.rs
crates/xberg-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/xberg-php/: Cargo.toml
crates/xberg-py/: Cargo.toml
crates/xberg-rag/: Cargo.toml
crates/xberg-rag-node/: Cargo.toml  index.d.ts  index.js  package.json
e2e/python/: conftest.py  conftest_patch.py  pyproject.toml
e2e/rust/: Cargo.toml  archives  bibtex  code  csv  data_formats  dbf  doc  docbook  docx  email  epub  fictionbook  ground_truth  html  hwp  images  images_extra  iwork  jats  jupyter  latex  markdown  odt  opml  org  ppt  pptx  rst  rtf  semantic  test_fixtures  text_splitter  typst  user_reports  vendored  xls  xlsx  xml  yaml
node_parsers/llama-index-node-parser-xberg/: CHANGELOG.md  README.md  pyproject.toml
readers/llama-index-readers-xberg/: CHANGELOG.md  README.md  pyproject.toml
tools/benchmark-harness/: CORPUS.md  Cargo.toml  README.md  SCHEMA.md  guardrails.json  split-boundary-guardrails.json
(+7848 files in other folders)
