[workspace]
members = [
    "crates/xberg",
    "crates/xberg-candle-ocr",
    "crates/xberg-cli",
    "crates/xberg-ffi",
    "crates/xberg-gliner",
    "crates/xberg-jni",
    "crates/xberg-libheif",
    "crates/xberg-node",
    "crates/xberg-paddle-ocr",
    "crates/xberg-php",
    "crates/xberg-py",
    "crates/xberg-rag",
    "crates/xberg-tesseract",
    "crates/xberg-wasm",
    "packages/dart/rust",
    "packages/swift/rust",
    "tools/benchmark-harness",
]
exclude = ["e2e/rust", "packages/elixir/native/xberg_nif", "packages/ruby/ext/xberg_rb"]
default-members = ["crates/xberg", "crates/xberg-cli"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.18"
edition = "2024"
rust-version = "1.91"
authors = ["Na'aman Hirschfeld <naaman@xberg.io>"]
license = "MIT"
repository = "https://github.com/xberg-io/xberg"
homepage = "https://xberg.io"

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)', 'cfg(feature, values("alef-meta"))'] }

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
blake3 = "1"
bytes = { version = "1", features = ["serde"] }
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = { version = "0.11", default-features = false }
cfb = "0.14"
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "color", "suggestions"] }
comrak = { version = "0.53", default-features = false }
console_error_panic_hook = "0.1"
crawlberg = { version = "1.0.5", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
dbase = "0.8"
futures = "0.3"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
hex = "0.4.3"
html-to-markdown-rs = { version = "3.8", default-features = false }
image = { version = "0.25.10", default-features = false }
itertools = "0.15"
js-sys = "0.3"

lazy_static = "1.5.0"
libc = "0.2.186"
liter-llm = { version = "1.9.3", default-features = false, features = ["tracing"] }
log = "0.4"
lzma-rust2 = { version = "0.16.5" }
memmap2 = "0.9"
minijinja = "2"
nom-exif = { version = "3.6", default-features = false }
num_cpus = "1.17.0"
once_cell = "1.21.4"

ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "api-18"] }
parking_lot = "0.12.5"
pdf_oxide = { version = "0.3.73", default-features = false, features = ["rendering", "legacy-crypto"] }
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false }
# SVG rendering (resvg re-exports tiny_skia and usvg; default-features = false
# drops text, system-fonts, memmap-fonts, raster-images — all pure-Rust, WASM-safe).
resvg = { version = "0.47", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_toon_format = "0.1"
similar = "3"
sqlite-vec = "0.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "fs",
    "time",
    "io-util",
] }
toml = "1.1.2"
tracing = "0.1"
tree-sitter-language-pack = { version = "1.12.5", default-features = false, features = ["serde"] }
url = "2.5.8"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileReader",
    "console",
    "TextDecoder",
    "ImageData",
    "Window",
    "Response",
] }
xberg = { path = "./crates/xberg", version = "1.0.0-rc.18", default-features = false }
xberg-gliner = { path = "./crates/xberg-gliner", version = "1.0.0-rc.18", default-features = false }
xberg-rag = { path = "./crates/xberg-rag", version = "1.0.0-rc.18", default-features = false }

[patch.crates-io]
xberg = { path = "crates/xberg" }
xberg-gliner = { path = "crates/xberg-gliner" }
xberg-rag = { path = "crates/xberg-rag" }
xberg-tesseract = { path = "crates/xberg-tesseract" }
xberg-paddle-ocr = { path = "crates/xberg-paddle-ocr" }
xberg-candle-ocr = { path = "crates/xberg-candle-ocr" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

# Archive crates crash with SIGBUS under opt-level=3 on macOS ARM64.
# Reduce optimization to prevent miscompilation of unsafe code.
# sevenz-rust2 requires opt-level=1 specifically (opt-level=2 still SIGBUS'd in go:e2e).
[profile.release.package.sevenz-rust2]
opt-level = 1

[profile.release.package.zip]
opt-level = 2

# WASM size optimization: reduce memory spikes during compilation
[profile.release.package.xberg-wasm]
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
