# Fork-overlay policy (see .ai-rulez/rules/upstream-sync.md):
# - Upstream-synced crates live in `members` and build by default.
# - Fork-only crates (web-ui, mcp-server, skills) are NOT workspace members and
#   are built only by explicitly targeting their own task/manifest. They are
#   excluded from `cargo build`/`cargo test` so the upstreamed tree stays clean.
[workspace]
members = [
    "crates/xberg",
    "crates/xberg-gliner",
    "crates/xberg-gliner-candle",
    "crates/xberg-cli",
    "crates/xberg-doc-store",
    "crates/xberg-libheif",
    "crates/xberg-candle-ocr",
    "crates/xberg-paddle-ocr",
    "crates/xberg-rag",
    "crates/xberg-rag-node",
    "crates/xberg-tesseract",
    "crates/xberg-wasm",
    "crates/xberg-ffi",
    "crates/xberg-jni",
    "crates/xberg-php",
    "crates/xberg-py",
    "packages/dart/rust",
    "packages/swift/rust",
    "tools/benchmark-harness",
]
exclude = ["e2e/rust", "packages/elixir/native/xberg_nif", "packages/ruby/ext/xberg_rb"]
default-members = ["crates/xberg", "crates/xberg-cli"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.5"
edition = "2024"
rust-version = "1.91"
authors = ["Na'aman Hirschfeld <naaman@xberg.io>"]
license = "MIT"
repository = "https://github.com/xberg-io/xberg"
homepage = "https://xberg.io"

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)', 'cfg(feature, values("alef-meta"))'] }

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1.89"
base64 = "0.22.1"
blake3 = "1"
bytes = { version = "1", features = ["serde"] }
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = { version = "0.11", default-features = false }
cfb = "0.14"
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "color", "suggestions"] }
comrak = { version = "0.53", default-features = false }
console_error_panic_hook = "0.1"
crawlberg = { version = "1.0.2", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
dbase = "0.7"
futures = "0.3"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
hex = "0.4.3"
html-to-markdown-rs = { version = "3.8.1", default-features = false }
image = { version = "0.25.10", default-features = false }
itertools = "0.15"
js-sys = "0.3"
xberg = { path = "./crates/xberg", version = "1.0.0-rc.5", default-features = false }
xberg-gliner = { path = "./crates/xberg-gliner", version = "1.0.0-rc.5", default-features = false }
xberg-gliner-candle = { path = "./crates/xberg-gliner-candle", version = "1.0.0-rc.5", default-features = false }
xberg-doc-store = { path = "./crates/xberg-doc-store", version = "1.0.0-rc.5", default-features = false }
xberg-rag = { path = "./crates/xberg-rag", version = "1.0.0-rc.5", default-features = false }
safetensors = "0.4"

lazy_static = "1.5.0"
libc = "0.2.186"
liter-llm = { version = "1.9.2", default-features = false, features = ["tracing"] }
log = "0.4"
lzma-rust2 = { version = "0.16.4" }
memmap2 = "0.9"
minijinja = "2"
nom-exif = { version = "3.6", default-features = false }
num_cpus = "1.17.0"
once_cell = "1.21.4"

ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "api-18"] }
parking_lot = "0.12.5"
pdf_oxide = { version = "0.3.70", default-features = false, features = ["rendering", "legacy-crypto"] }
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
# SVG rendering (resvg re-exports tiny_skia and usvg; default-features = false
# drops text, system-fonts, memmap-fonts, raster-images — all pure-Rust, WASM-safe).
resvg = { version = "0.47", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_toon_format = "0.1"
similar = "3"
sqlite-vec = "0.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "fs",
    "time",
    "io-util",
] }
toml = "1.1.2"
tracing = "0.1"
tree-sitter-language-pack = { version = "1.12.2", default-features = false, features = ["serde"] }
url = "2.5.8"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileReader",
    "console",
    "TextDecoder",
    "ImageData",
    "Window",
    "Response",
] }

[patch.crates-io]
# safetensors 0.8.0 (pulled in transitively via candle-core's hardcoded
# `version = "0.8.0"` dependency, not overridable at the workspace level any
# other way): its Metadata::validate() computes `nelements * dtype.bitsize()`
# using `usize`, which is 32-bit on wasm32. A tensor with more than ~134M
# elements (e.g. a DeBERTa-v2-scale token embedding table -- vocab_size *
# hidden_size can exceed that on its own) overflows this intermediate
# bit-count computation on wasm32 even though the tensor's actual byte size
# is a perfectly reasonable few hundred MB, and load_buffer fails with
# "overflow computing buffer size from shape and/or element type" --
# confirmed via crates/xberg-gliner-candle's initCandleNer loading a real
# ~1.24GB GLiNER2 model in-browser. vendor/safetensors-0.8.0-wasm32-fix is an
# unmodified copy of the crate except Metadata::validate()'s intermediate
# arithmetic widened to u128 (see that file's inline comment for the exact
# diff) -- native (non-wasm32) behavior is unaffected since the final byte
# size was always well within `usize` range there.
safetensors = { path = "vendor/safetensors-0.8.0-wasm32-fix" }
# candle-nn 0.11.0: LayerNorm::forward's fused fast-path
# (crate::ops::layer_norm) does not go through the F32-upcast/downcast-back
# logic the manual path a few lines below it performs, and throws "dtype
# mismatch in add, lhs: F32, rhs: F16" for F16 inputs -- confirmed via a live
# browser reproduction running xberg-gliner-candle's DeBERTa-v2 encoder at
# F16 (required on wasm32 to fit the encoder's weights in linear memory).
# vendor/candle-nn-0.11.0-f16-layernorm-fix skips the fused path for
# F16/BF16 inputs only (forcing the already-correct manual path); F32 and
# other dtypes are unaffected.
candle-nn = { path = "vendor/candle-nn-0.11.0-f16-layernorm-fix" }
# TEMPORARY diagnostic instrumentation (not a fix) -- adds .with_context()
# labels at each stage of DebertaV2's forward pass (embeddings, per-layer,
# attention, disentangled-attention sub-steps) so the next F16 dtype-mismatch
# error pinpoints the exact failing operation instead of only "somewhere in
# encoder.forward". Remove this patch once the real fix is identified and
# applied (either here permanently or upstream).
candle-transformers = { path = "vendor/candle-transformers-0.11.0-f16-debug" }
xberg = { path = "crates/xberg" }
xberg-gliner = { path = "crates/xberg-gliner" }
xberg-gliner-candle = { path = "crates/xberg-gliner-candle" }
xberg-doc-store = { path = "crates/xberg-doc-store" }
xberg-rag = { path = "crates/xberg-rag" }
xberg-tesseract = { path = "crates/xberg-tesseract" }
xberg-paddle-ocr = { path = "crates/xberg-paddle-ocr" }
xberg-candle-ocr = { path = "crates/xberg-candle-ocr" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

# Archive crates crash with SIGBUS under opt-level=3 on macOS ARM64.
# Reduce optimization to prevent miscompilation of unsafe code.
# sevenz-rust2 requires opt-level=1 specifically (opt-level=2 still SIGBUS'd in go:e2e).
[profile.release.package.sevenz-rust2]
opt-level = 1

[profile.release.package.zip]
opt-level = 2

# WASM size optimization: reduce memory spikes during compilation
[profile.release.package.xberg-wasm]
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
