[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "xberg-cli"
version = "1.0.0rc18"
description = "CLI proxy for xberg — downloads and runs the native xberg binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@xberg.io" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
urls.Homepage = "https://github.com/xberg-io/xberg"
urls.Issues = "https://github.com/xberg-io/xberg/issues"
urls.Repository = "https://github.com/xberg-io/xberg.git"
scripts.xberg = "xberg_cli.cli:main"

[tool.hatch]
build.hooks.custom.path = "hatch_build.py"
build.targets.wheel.packages = ["xberg_cli"]
