[package]
name = "kreuzberg-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "C FFI bindings for Kreuzberg document intelligence library"
license.workspace = true
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg.dev"
documentation = "https://docs.rs/kreuzberg-ffi"
readme = "README.md"
keywords = ["ffi", "bindings", "document", "extraction", "api"]
categories = ["development-tools::ffi", "text-processing"]

[package.metadata.cargo-machete]
ignored = ["cbindgen"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
rayon = ["dep:rayon"]
embeddings = ["kreuzberg/embeddings"]
tree-sitter = ["kreuzberg/tree-sitter"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
ctor = { workspace = true }
html-to-markdown-rs = { workspace = true }
kreuzberg = { workspace = true, features = ["bundled-pdfium", "full"] }
log = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serial_test = "3.4.0"
tempfile = { workspace = true }

[[bench]]
name = "result_view_benchmark"
harness = false
