[package]
name = "kreuzberg-ffi"
version = "5.0.0-rc.24"
edition = "2021"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "ocr", "pdf", "text"]
categories = []
repository = "https://github.com/kreuzberg-dev/kreuzberg"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio", "async-trait"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "redaction"]
full = ["kreuzberg/full"]
pdf = ["kreuzberg/pdf"]
ocr = ["kreuzberg/ocr"]
paddle-ocr = ["kreuzberg/paddle-ocr"]
paddle-ocr-types = ["kreuzberg/paddle-ocr-types"]
layout-detection = ["kreuzberg/layout-detection"]
layout-types = ["kreuzberg/layout-types"]
embeddings = ["kreuzberg/embeddings"]
embedding-presets = ["kreuzberg/embedding-presets"]
reranker = ["kreuzberg/reranker"]
reranker-presets = ["kreuzberg/reranker-presets"]
chunking = ["kreuzberg/chunking"]
keywords-yake = ["kreuzberg/keywords-yake"]
keywords-rake = ["kreuzberg/keywords-rake"]
language-detection = ["kreuzberg/language-detection"]
html = ["kreuzberg/html"]
tree-sitter = ["kreuzberg/tree-sitter"]
office = ["kreuzberg/office"]
email = ["kreuzberg/email"]
archives = ["kreuzberg/archives"]
stopwords = ["kreuzberg/stopwords"]
auto-rotate = ["kreuzberg/auto-rotate"]
auto-rotate-types = ["kreuzberg/auto-rotate-types"]
tokio-runtime = ["kreuzberg/tokio-runtime"]
api = ["kreuzberg/api"]
api-types = ["kreuzberg/api-types"]
mcp = ["kreuzberg/mcp"]
liter-llm = ["kreuzberg/liter-llm"]
quality = ["kreuzberg/quality"]
svg = ["kreuzberg/svg"]
transcription = ["kreuzberg/transcription"]
transcription-types = ["kreuzberg/transcription-types"]
classification = ["kreuzberg/classification"]
captioning = ["kreuzberg/captioning"]
ner-onnx = ["kreuzberg/ner-onnx"]
ner-llm = ["kreuzberg/ner-llm"]
diff = ["kreuzberg/diff"]
redaction = ["kreuzberg/redaction"]
android-target = ["kreuzberg/android-target", "api", "api-types", "archives", "auto-rotate-types", "captioning", "chunking", "classification", "diff", "email", "embedding-presets", "html", "keywords-rake", "keywords-yake", "language-detection", "layout-types", "liter-llm", "mcp", "ner-llm", "ocr", "office", "paddle-ocr-types", "pdf", "quality", "redaction", "reranker-presets", "stopwords", "svg", "tokio-runtime", "transcription-types", "tree-sitter"]

[dependencies]
ahash = "0.8"
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "windows")))'.dependencies]
kreuzberg = { path = "../kreuzberg", version = "5.0.0-rc.24", features = ["full", "pdf", "ocr", "paddle-ocr", "paddle-ocr-types", "layout-detection", "layout-types", "embeddings", "embedding-presets", "reranker", "reranker-presets", "chunking", "keywords-yake", "keywords-rake", "language-detection", "html", "tree-sitter", "office", "email", "archives", "stopwords", "auto-rotate", "auto-rotate-types", "tokio-runtime", "api", "api-types", "mcp", "liter-llm", "quality", "svg", "transcription", "transcription-types", "classification", "captioning", "ner-onnx", "ner-llm", "diff", "redaction"] }

[target.'cfg(target_os = "android")'.dependencies]
kreuzberg = { path = "../kreuzberg", version = "5.0.0-rc.24", features = ["android-target"] }

[target.'cfg(target_os = "ios")'.dependencies]
kreuzberg = { path = "../kreuzberg", version = "5.0.0-rc.24", features = ["android-target"] }

[target.'cfg(target_os = "windows")'.dependencies]
kreuzberg = { path = "../kreuzberg", version = "5.0.0-rc.24", features = ["windows-target"] }


[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
